Refactor services and repository: replace string concatenation with `String.format`, remove unused method, and improve code readability.